--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,6 +1,10 @@
 <div class="posts" *ngIf="posts?.length; else noPosts">
   <div *ngFor="let post of posts; let i = index">
-    <app-post-card [post]="post" (onRemove)="removePost(i)"></app-post-card>
+    <app-post-card
+      *ngIf="post"
+      [post]="post"
+      (onRemove)="removePost(i)"
+    ></app-post-card>
   </div>
 </div>
 <ng-template #noPosts>
